# ppl

./: .gitignore  .gitmodules  Build.hs  Main.hs  Makefile  TODOS.org  caselist.txt  ppl.cabal
.config/: .Need-dwi.hs  Need.hs
config/: .#all.cfg  Main.hs  Need.hs  Paths.hs  PathsInput.hs  PathsOutput.hs  PathsOutputHCP.hs  PathsOutputRoot.hs  Pipeline.hs  Pipeline.hs.example  all.cfg  axis_align_nrrd.py  config.cfg  epi.sh  settings.cfg  software.cfg  trainingDataT1.csv
config-input-paths/: HcpInputPaths.hs  InputPaths.hs
config-output-paths/: HcpOutputPaths.hs  OutputDirectory.hs  OutputPaths.hs  SoftwareOutputPaths.hs
config-paths/: InputPaths.hs  OutputPaths.hs
pipeline-cli/: Main.hs
pipeline-lib/: ANTs.hs  Dwi.hs  DwiMask.hs  DwiMask.hs-boot  FSL.hs  FreeSurfer.hs  FreeSurfer.hs-shelly  Freesurfer.hs  FsInDwi.hs  HCP.hs  Intrust.hs  MABS.hs  Matlab.hs  Node.hs  NodeUtil.hs  Nrrd.hs  PNLUtil.hs  Pipeline.hs  PipelineRegistrations.hs  Registration.hs  Shake.hs  Software.hs  T1w.hs  T1wMask.hs  T1wMask.hs-boot  T2w.hs  T2wMask.hs  Teem.hs  TractMeasures.hs  Types.hs  UKFTractography.hs  Util.hs  WmqlTracts.hs
pipeline-lib/BuildNode/: ANTs.hs  DWI.hs  DWIMask.hs  FreeSurfer.hs  FreeSurferToDwi.hs  Freesurfer.hs  HCP.hs  MABS.hs  Software.hs-orig  Structural.hs  StructuralMask.hs  TractQuerier.hs  UKFTractography.hs
pipeline-lib/BuildNode/HCP/: B0sPair.hs  Eddy.hs  Normalize.hs  PostEddy.hs  Preprocessing.hs  Topup.hs  Types.hs  Util.hs
pipeline-lib/BuildNode/HCP/old/: Topup.hs
pipeline-lib/HCP/: Eddy.hs  Normalize.hs  PostEddy.hs  Preprocessing.hs  Topup.hs  Types.hs  Util.hs
pipeline-lib/Node/: ANTs.hs  DWI.hs  DWIMask.hs  Dwi.hs  DwiMask.hs  DwiMask.hs-boot  FreeSurfer.hs  FsInDwi.hs  HCP.hs  MeasureTracts.hs  MeasureTractsAllCsv.hs  MeasureTractsCsv.hs  Structural.hs  StructuralMask.hs  T1w.hs  T1wMask.hs  T1wMask.hs-boot  T2w.hs  T2wMask.hs  TractMeasures.hs  TractQuerier.hs  Types.hs  UKFTractography.hs  Util.hs  WmparcInDwi.hs  WmqlTracts.hs
pipeline-lib/Node/HCP/: B0sPair.hs  Eddy.hs  Normalize.hs  Preprocessing.hs  Topup.hs  Types.hs  Util.hs
pipeline-lib/Node/Software/: BrainsTools.hs  TractQuerier.hs  UKFTractography.hs
pipeline-lib/Pipeline/: ANTs.hs  DWI.hs  DWIMask.hs  FreeSurfer.hs  FreeSurferInDwi.hs  FsInDwi.hs  HCP.hs  Structural.hs  StructuralMask.hs  TractQuerier.hs  UKFTractography.hs  Util.hs
pipeline-lib/Pipeline/HCP/: B0sPair.hs  Eddy.hs  Normalize.hs  PostEddy.hs  Preprocessing.hs  Topup.hs  Types.hs  Util.hs
pipeline-lib/Shake/: BuildKey.hs  BuildNode.hs
pipeline-lib/Software/: ANTs.hs  BrainsTools.hs  Freesurfer.hs  TractQuerier.hs  UKFTractography.hs  Util.hs
pipeline-lib/Teem/: Parser.hs
pipeline-paths/: AntsPath.hs  HcpInputPath.hs  HcpInputPaths.hs  HcpOutputPaths.hs  SoftwareOutputPaths.hs
scripts/: BRAINSTools.sh  Makefile  README.md  atlas.py  bse.py  bsub.py  downloadGitHub.py  eddy.py  environment.yml  epi.py  makebrainstools.py  makesoft.py  maketractquerier.py  pip_packages.nix  requirements.txt  shell.nix  tractquerier.py
scripts/test/: Makefile  cte.sh  env-cte.sh  env-int.sh  int.sh  software.sh  testdata.sh
scripts/util/: __init__.py
src/: hcp.cfg.example
src-pipeline/: FSL.hs  Nrrd.hs  PNLPipeline.hs
src-pipeline/HCP/: B0sPair.hs  Config.hs  DWIPair.hs  DwiTypes.hs  Eddy.hs  Normalize.hs  PostEddy.hs  Preprocessing.hs  Preprocessing1.hs  Topup.hs  Types.hs  Util.hs
src-pipeline/Shake/: BuildKey.hs
src-ppl/: HCP.hs  PNLUtil.hs  Shake.hs
src-ppl/HCP/: B0sPair.hs  Config.hs  Eddy.hs  Normalize.hs  PostEddy.hs  Preprocessing.hs  Preprocessing1.hs  Topup.hs  Topup1.hs
src-ppl/Shake/: BuildKey.hs
src/hcp/: HCPConfig.hs  HCPConfig.hs.example
