name:                ppl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          reckbo@bwh.harvard.edu
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ppl
  hs-source-dirs:      pipeline-lib, config
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-I0
  build-depends:       base
                     , shake
                     , time
                     , directory
                     , pathwalk
                     , temporary >= 1.2.0.4
                     , filepath
                     , containers
                     , trifecta
                     , extra
                      -- hcp dependencies
                     , process
                     , bytestring
                     , yaml
                     , split
                     , mtl
                     -- , interpolatedstring-perl6
  default-language:    Haskell2010
  other-modules:     Shake.BuildNode
                   , Teem
                   , FSL
                   -- , HCP
