name:                ppl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          reckbo@bwh.harvard.edu
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ppl
  hs-source-dirs:      pipeline-lib, pipeline-cli, config
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-I0
  build-depends:       base
                     , shake
                     , time
                     , directory
                     , pathwalk
                     , temporary >= 1.2.0.4
                     , filepath
                     , containers
                     , trifecta
                     , extra
                     , regex-compat
                     , unordered-containers >= 0.2
                      -- hcp dependencies
                     , process
                     , bytestring
                     , yaml
                     , split
                     , mtl
                     -- , interpolatedstring-perl6
  default-language:    Haskell2010
  other-modules:     Shake.BuildNode
                   , Teem
                   , FSL
                   , ANTs
                   , Node
                   , Node.FreeSurfer
                   , Node.Dwi
                   , Node.DwiMask
                   , Node.FsInDwi
                   , Node.T1w
                   , Node.T1wMask
                   , Node.T2w
                   , Node.T2wMask
                   , Node.Util
                   , Teem.Parser
                   , Node.TractMeasures
                   , Node.Types
                   , Node.WmqlTracts
                   , Node.UKFTractography
                   , Node.Software.UKFTractography
                   , Node.Software.BrainsTools
                   , Node.Software.TractQuerier
                   , Util
                   , MABS
                   , Need
                   , Node.HCP
                   , Node.HCP.B0sPair
                   , Node.HCP.Eddy
                   , Node.HCP.Normalize
                   , Node.HCP.Preprocessing
                   , Node.HCP.Topup
                   , Node.HCP.Types
                   , Node.HCP.Util
                   , Paths
